@@ -19,3 +19,15 @@ Then /^the "([^\"]*)" menu should contain a "([^\"]*)" entry$/ do |menu_text, en
   menu_texts.detect {|t| t == entry_text}.should_not be_nil
 end
 
+Then /^the menu item "([^\"]*)\|([^\"]*)" should be (active|inactive)$/ do |menu_name, menu_item, active|
+  items = main_menu.get_items.to_a
+  menu = items.detect {|i| i.text == menu_name}
+  items = menu.get_menu.get_items.to_a
+  item = items.detect {|i| i.text.split("\t").first == menu_item }
+  case active
+  when "active"
+    item.enabled.should be_true
+  when "inactive"
+    item.enabled.should be_false
+  end
+end
