@@ -1,0 +1,7 @@
+When /^I undo$/ do
+  Redcar::Top::UndoCommand.new.run
+end
+
+When /^I redo$/ do
+  Redcar::Top::RedoCommand.new.run
+end
